packages/fuselage/src/components/Accordion/Accordion.styles.scss
@use '../../styles/colors.scss';
@use '../../styles/lengths.scss';
@use '../../styles/typography.scss' as *;
@use '../../styles/mixins/interactivity.scss' as *;
@use '../../styles/mixins/shadows.scss' as *;

.rcx-accordion {
  display: flex;
  flex-flow: column nowrap;
  border-block-end-color: colors.stroke(extra-light);
  border-block-end-width: lengths.border-width(default);
}

.rcx-accordion-item {
  display: flex;
  flex-flow: column nowrap;
}

.rcx-accordion-item__bar {
  display: flex;
  flex-flow: row nowrap;

  min-height: lengths.size(2 * 32 + 24);
  padding: (lengths.padding(32) - lengths.border-width(default, rem))
    (lengths.padding(8) - lengths.border-width(default, rem));

  text-align: start;

  color: colors.font(titles-labels);

  border-width: lengths.border-width(default);
  border-color: colors.stroke(extra-light) transparent transparent;

  &[tabindex] {
    @include clickable;

    &.hover,
    &:hover {
      background-color: colors.surface(tint);
    }

    &.focus,
    &:focus {
      border-color: colors.stroke(highlight);
      @include use-focus-shadow(
        $outer-color: colors.stroke(extra-light-highlight)
      );
    }
  }

  &--disabled {
    cursor: not-allowed;

    color: colors.font(disabled);
    background-color: colors.surface(disabled);
  }
}

.rcx-accordion-item__title {
  flex: 1 1 lengths.size(none);

  @include use-text-ellipsis;
  white-space: nowrap;

  @include use-font-scale(h4);
}

.rcx-accordion-item__panel {
  position: relative;

  visibility: hidden;

  overflow: hidden;

  height: lengths.size(none);
  padding: lengths.padding(none) lengths.padding(8);

  &--expanded {
    visibility: visible;

    height: auto;
    padding: lengths.padding(32) lengths.padding(8);
  }
}

